--- a/online.html
+++ b/online.html
@@ -41,6 +41,22 @@
         </div>
     </div>
     </div>
+    <!--feature categories-->
+    <div class="categories">
+        <div class="small-container">
+            <div class="row">
+                <div class="colomn-3">
+                    <img src="images/istockphoto-1296215591-612x612.jpg">
+                </div>
+                <div class="colomn-3">
+                    <img src="images/categories2.jpg">
+                </div>
+                <div class="colomn-3">
+                    <img src="images/categories3.jpg">
+                </div>
+            </div>
+        </div>
+        </div>
 
 </body>
 </html>
