--- a/online.html
+++ b/online.html
@@ -7,6 +7,8 @@
     <title>Dream store</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+
 
 </head>
 <body>
@@ -57,6 +59,146 @@
             </div>
         </div>
         </div>
+        <!--feature product-->
+        <div class="small-container">
+            <h2 class="title">Featured Products</h2>
+            <div class="row">
+                <div class="colomn-4">
+                    <img src="images/Air Jordan won.jpg">
+                    <h4>Air Jordan Retro-4 Oreo</h4>
+                    <div class="rating">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <p>R2500.00</p>
+                </div>
+                <div class="colomn-4">
+                    <img src="images/nike dunk low blue and white side.png">
+                    <h4>nike dunk low blue and white</h4>
+                    <div class="rating">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <p>R1500.00</p>
+                </div>
+                <div class="colomn-4">
+                    <img src="images/nike dunk glow nice2.jpg">
+                    <h4>nike dunk glow</h4>
+                    <div class="rating">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <p>R2800.00</p>
+                </div>
+                <div class="colomn-4">
+                    <img src="images/Nike-Dunk-Low-Team-Green.jpg">
+                    <h4>dunk low green and white</h4>
+                    <div class="rating">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <p>R2700.00</p>
+                </div>
+                <div class="colomn-4">
+                    <img src="images/nike-Sb dunk low orange side.jpg">
+                    <h4>nike-Sb dunk low orange</h4>
+                    <div class="rating">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <p>R2800.00</p>
+                </div>
+                <div class="colomn-4">
+                    <img src="images/Air jordan White side.png">
+                    <h4>Air Jordan Retro-4 white</h4>
+                    <div class="rating">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <p>R5500.00</p>
+                </div>
+                <div class="colomn-4">
+                  <img src="images/dunk low grey2.jpeg">
+                    <h4>nike dunk low grey</h4>
+                    <div class="rating">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <p>R5500.00</p>
+                </div>
+            </div>
+             <h2 class="title">Latest Products</h2>
+             <div class="row">
+                <div class="colomn-4">
+                    <img src="images/palladium boots.jpg">
+                    <h4>dunk low green and white</h4>
+                    <div class="rating">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <p>R5700.00</p>
+                </div>
+                <div class="colomn-4">
+                    <img src="images/dr-martens-1460-bex-smooth-boots.jpg">
+                    <h4>dunk low green and white</h4>
+                    <div class="rating">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <p>R4700.00</p>
+                </div>
+                <div class="colomn-4">
+                    <img src="images/timberland.jfif">
+                    <h4>dunk low green and white</h4>
+                    <div class="rating">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <p>R3700.00</p>
+                </div><div class="colomn-4">
+                    <img src="images/temberland grew.jpg">
+                    <h4>dunk low green and white</h4>
+                    <div class="rating">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <p>R4700.00</p>
+                </div>
+            </div>
+                
 
 </body>
 </html>
