--- a/online.html
+++ b/online.html
@@ -198,6 +198,21 @@
                     <p>R4700.00</p>
                 </div>
             </div>
+            <!--offers-->
+            <div class="offer">
+                <div class="small-container">
+                    <div class="row">
+                        <div class="colomn-2">
+                            <img src="images/raw.jpg" class="offer-img">
+                        </div>
+                        <div class="colomn-2"></div>
+                        <p>Excluse available on OnlineShoeCity</p>
+                        <h1>slides</h1>
+                        <small>These lightweight slides show a raised RAW design at the strap. The ergonomic footbed allows for a relaxed modus</small>
+                        <a href="" class="btn">Buy Now &#8594;</a>
+                    </div>
+                </div>
+            </div>
                 
 
 </body>
