--- a/online.html
+++ b/online.html
@@ -213,7 +213,25 @@
                     </div>
                 </div>
             </div>
-                
+        </div>
+            <!--Testimonial-->
+            <div class="testimonial">
+                <div class="small-container">
+                    <div class="row">
+                        <div class="colomn-3">
+                            <p>defently coming back, they are so comftable.</p>
+                            <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                        </div>
+                        <img src="images/kanye.jpg">
+                        <h3>Kanye west</h3>
+                    </div>
+                </div>
+            </div>    
 
 </body>
 </html>
