--- a/online.html
+++ b/online.html
@@ -21,7 +21,7 @@
                 <img src="images/logo.jpg" width="130px">
             </div>
             <nav>
-                <ul>
+                <ul id="menuIterms">
                     <li><a href="">Home</a></li>
                     <li><a href="">Products</a></li>
                     <li><a href="">About</a></li>
@@ -30,6 +30,7 @@
                 </ul>
             </nav>
             <img src="images/cart.jpg" width="30px" height="30px">
+            <img src="images/menu-bar.jpg" class="menu-icon" onclick="menutoggle()">
         </div>
         <div class="row">
             <div class="colomn-2">
@@ -229,7 +230,33 @@
                         </div>
                         <img src="images/kanye.jpg">
                         <h3>Kanye west</h3>
-                    </div>
+                    </div>    
+                 </div>        
+          </div>
+          <!--footer-->
+          <div class="footer">
+              <div class="container">
+                  <div class="row">
+                      <div class="footer-colomn-1">
+                          <h3>Download Our App</h3>
+                          <p>Download App for Androidn and ios mobile phone</p>
+                      </div> 
+                      <div class="footer-colomn-2">
+                        <img src="images/logo.jpg" alt="">
+                        <p>Our Purpose Is To Put Smile TO Every Shoe Lover And Sustainably Make The Pleasure</p>
+                    </div> 
+                    <div class="footer-colomn-3">
+                        <h3>Follow Us</h3>
+                        <ul>
+                            <li>Facebook</li>
+                            <li>Twitter</li>
+                            <li>Instagram</li>
+                            <li>Youtube</li>
+                        </ul>
+                    </div> 
+                  </div>
+              </div>
+          </div>
 
 
 </body>
