--- a/online.html
+++ b/online.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dream store</title>
@@ -21,7 +22,7 @@
                 <img src="images/logo.jpg" width="130px">
             </div>
             <nav>
-                <ul id="menuIterms">
+                <ul id="MenuItems">
                     <li><a href="">Home</a></li>
                     <li><a href="">Products</a></li>
                     <li><a href="">About</a></li>
@@ -257,7 +258,7 @@
                   </div>
               </div>
           </div>
-
+<script src="online.js"></script>
 
 </body>
 </html>
